src/main/css/index.css
/*
 * The MIT License
 *
 * Copyright (c) 2018 Sven Schoenung
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 */

.fc-toolbar {
  background: var(--table-background);
  height: 2.6em;
  border-bottom: 1px solid #ddd;
  padding: 3px;
}

.fc-toolbar.fc-header-toolbar {
  margin-bottom: 0px;
}

.fc-toolbar .fc-clear {
  clear: none;
}

.fc-center {
  line-height: 2.2em;
}

.fc-view-container {
  padding: 5px;
}

.fc-event-container a,
.fc-event-container a:link,
.fc-event-container a:active,
.fc-event-container a:visited {
  text-decoration: none;
}

.fc-event {
  background-color: #888888;
  border-color: #888888;
}

.fc-event.event-selected {
  background: #aaa;
}

.fc-event.event-result-success {
  background-color: var(--result-success-color);
  border-color: var(--result-success-color);
  color: var(--result-success-text-color);
}

.fc-event.event-result-success.event-selected {
  background: var(--result-success-selected-color);
  color: var(--result-success-selected-text-color);
}

.fc-event.event-result-failure {
  background-color: var(--result-failure-color);
  border-color: var(--result-failure-color);
  color: var(--result-failure-text-color);
}

.fc-event.event-result-failure.event-selected {
  background: var(--result-failure-selected-color);
  color: var(--result-failure-selected-text-color);
}

.fc-event.event-result-unstable {
  background-color: var(--result-unstable-color);
  border-color: var(--result-unstable-color);
  color: var(--result-unstable-text-color);
}

.fc-event.event-result-unstable.event-selected {
  background: var(--result-unstable-selected-color);
  color: var(--result-unstable-selected-text-color);
}

.fc-event.event-state-scheduled {
  background-color: var(--result-scheduled-color);
  border-color: var(--result-scheduled-text-color);
  border-style: dashed;
  color: var(--result-scheduled-text-color);
}

.fc-event.event-state-scheduled.event-selected {
  background: var(--result-scheduled-selected-color);
  color: var(--result-scheduled-selected-text-color);
}

.fc-event.event-state-running {
  border-style: dashed;
  animation: blink-animation 2s both ease-in-out infinite;
}

@keyframes blink-animation {
  50% {
    opacity: 0.2;
  }
}

.fc-unthemed td.fc-today {
  background: grey;
}

.tippy-tooltip.jenkins-theme {
  background-color: var(--background);
  border: 1px solid var(--card-border-color);
  color: var(--text-color);
  padding: 0;
  font-size: 100%;
  text-align: left;
  border-radius: 8px;
}

.tippy-tooltip.jenkins-theme .parameterBlock {
  padding-top: 10px;
}

.tippy-tooltip.jenkins-theme .parameters {
  padding-left: 10px;
}

.tippy-tooltip.jenkins-theme .tooltip-head {
  padding: 5px;
  background: var(--table-background);
  border-radius: 8px;
}

.tippy-tooltip.jenkins-theme .tooltip-head .tooltip-title {
  margin-left: 5px;
}

.tippy-tooltip.jenkins-theme .tooltip-head .tooltip-close {
  float: right;
  margin-right: 3px;
  margin-left: 5px;
  cursor: pointer;
}

.tippy-tooltip.jenkins-theme .tooltip-head .tooltip-title {
  margin-left: 5px;
}

.tippy-tooltip.jenkins-theme .tooltip-body {
  padding: 10px;
}

.tippy-tooltip.jenkins-theme .tooltip-middle {
  display: flex;
  gap: 5px;
  align-items: top;
}

.tippy-tooltip.jenkins-theme .tooltip-left {
  padding-right: 10px;
  min-width: 200px;
}

.tippy-tooltip.jenkins-theme .tooltip-right {
  padding-left: 10px;
  border-left: 1px solid var(--text-color-secondary);
  min-width: 200px;
}

.tippy-tooltip.jenkins-theme .tooltip-right ul a {
  display: inline-block;
  min-width: 3em;
}

.tippy-tooltip.jenkins-theme .tooltip-bottom {
  border-top: 1px solid var(--text-color-secondary);
  margin-top: 20px;
  padding-top: 10px;
}

.tippy-tooltip.jenkins-theme .tooltip-bottom .previous {
  float: left;
}

.tippy-tooltip.jenkins-theme .tooltip-bottom .previous i:after {
  content: "\25C0";
  font-size: 80%;
  font-style: normal;
  margin-right: 2px;
}

.tippy-tooltip.jenkins-theme .tooltip-bottom .next {
  float: right;
}

.tippy-tooltip.jenkins-theme .tooltip-bottom .next i:after {
  content: "\25B6";
  font-size: 80%;
  font-style: normal;
  margin-left: 2px;
}

.tippy-tooltip.jenkins-theme .tooltip-body .time {
  color: var(--text-color-secondary);
  text-decoration: none;
}

.tippy-tooltip.jenkins-theme .tooltip-body .time:hover {
  color: var(--text-color-secondary);
  text-decoration: underline;
}

.tippy-tooltip.jenkins-theme .tooltip-body .nextBuild {
  color: var(--text-color-secondary);
}

.tippy-tooltip.jenkins-theme .tooltip-body ul {
  margin: 0px;
  padding: 0px;
  list-style-type: none;
}

.tippy-popper[x-placement^=top] .tippy-tooltip.jenkins-theme .tippy-arrow {
  border-top: 7px solid var(--text-color-secondary);
}

.tippy-popper[x-placement^=bottom] .tippy-tooltip.jenkins-theme .tippy-arrow {
  border-bottom: 7px solid var(--text-color-secondary);
}

#calendar-view {
  padding: 0.5rem;
}

.calendar-view-config-default {
  font-size: 90%;
  color: var(--text-color-secondary);
}

.calendar-view-config-label {
  vertical-align: middle;
  padding: 0px 10px 20px 10px;
}

.calendar-view-config-label.first-label {
  padding-left: 0px;
}

.calendar-view-config-input {
  width: 30%;
}

.calendar-view-config-container {
  display: flex;
  gap: 1rem;
  align-items: center;
}

.calendar-view-config-container .jenkins-radio:not(:last-of-type) {
  margin-bottom: 0;
}

